--- a/src/app/Components/userBiomedica/vista-Equipos/crear-equipo/crear-equipo.component.html
+++ b/src/app/Components/userBiomedica/vista-Equipos/crear-equipo/crear-equipo.component.html
@@ -107,19 +107,28 @@
   </div>
 </div>
 
-<p-dialog header="Agregar Fechas de Mantenimiento" [modal]="true" [(visible)]="modalAddFechasMantenimiento"
-  [style]="{ width: '20rem' }" [closable]="false">
-  <div *ngFor="let item of fechasMantenimiento; let i = index; trackBy: trackByIndex" class="mb-3">
-    <label class="block mb-2" [for]="'fecha-mant-'+i">Fecha {{ i + 1 }}</label>
-    <p-datepicker [(ngModel)]="fechasMantenimiento[i]" inputId="{{ 'fecha-mant-' + i }}" view="month" dateFormat="mm/yy"
-      [style]="{ width: '100%' }">
-    </p-datepicker>
+<p-dialog header="Configurar Plan de Mantenimiento" [modal]="true" [(visible)]="modalAddFechasMantenimiento"
+  styleClass="standard-modal modal-md" [closable]="false" [draggable]="false" [resizable]="false">
+  <div class="p-fluid">
+    <div class="field">
+      <label class="block mb-2 font-bold" for="mesInicio">Mes de Inicio</label>
+      <p-select [options]="monthOptions" [(ngModel)]="mesInicio" optionLabel="name" optionValue="value"
+        (onChange)="calcularFechas()" appendTo="body" styleClass="w-full"></p-select>
+      <small class="block mt-1">Seleccione el primer mes del mantenimiento.</small>
+    </div>
+    <div class="field mt-3">
+      <label class="block mb-2 font-bold" for="meses">Meses Calculados</label>
+      <p-multiSelect [options]="monthOptions" [(ngModel)]="selectedMonths" placeholder="Seleccione los meses"
+        optionLabel="name" optionValue="value" display="chip" [disabled]="true" appendTo="body"
+        styleClass="w-full"></p-multiSelect>
+      <p class="font-bold mt-2"
+        [ngClass]="{'text-green-500': selectedMonths.length > 0, 'text-red-500': selectedMonths.length === 0}">
+        {{calculatedMonthsText}}
+      </p>
+    </div>
   </div>
-  <div style="height: 150px;">
-
-  </div>
-  <div class="flex justify-end gap-2">
-    <p-button label="Guardar" (click)="validarFechasMantenimiento()" />
+  <div class="flex justify-content-end gap-2 mt-4">
+    <p-button label="Guardar y Continuar" (click)="validarFechasMantenimiento()" icon="pi pi-check" />
   </div>
 </p-dialog>
 
